welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var bool1=false
  if (estFaceMur) {return false}
  else {avance();
  if (getCouleurSol()==green) {bool1=true}
    else {bool1=false}
  recule()
  }
  return bool1
}